--- a/flor_circulo.html
+++ b/flor_circulo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintando com JavaScript</title>
+    <title>Flor com JavaScript</title>
 </head>
 <body>
     
