--- a/grafico_barras.html
+++ b/grafico_barras.html
@@ -13,47 +13,46 @@
 	</canvas>
 
 	<script>
+		var dados2015 = [50,25,20,5]
+		var dados2016 = [65,20,13,2]
+		var cores = ["blue","green","yellow","red"];
 		
-		var dados2015 = [50,25,20,5];
-		var dados2016 = [65,20,13,2];
-
-		var cores = ["blue",'green','yellow','red'];
-
 		function desenhaRetangulo(x,y,largura,altura,cor) {
-			var tela= document.querySelector("canvas")
-			var pincel = tela.getContext("2d");
-
-			pincel.fillStyle = cor;
-			pincel.fillRect (x,y,largura,altura);
-			pincel.strokeStyle = "black"
-			pincel.strokeRect(x,y,largura,altura)
-		}
-
-		function desenhaTexto(x,y,texto) {
-			var tela= document.querySelector("canvas")
-			var pincel = tela.getContext("2d");
-
-			pincel.font-"15px Georgia";
-			pincel.fillStyle="black";
-			pincel.fillText(texto, x,y);
-		}
-
-		function desenhaDados(x,y,dado,cores,texto) {
 			
+			var tela = document.querySelector("canvas");
+			var pincel= tela.getContext("2d");
+			
+			pincel.fillStyle = cor;
+			pincel.fillRect(x,y,largura,altura);
+			pincel.strokeStyle = "black";
+			pincel.strokeRect = (x,y,largura,altura);
+		}
+		
+		function desenhaTexto(x,y,texto) {
+			
+			var tela = document.querySelector("canvas");
+			var pincel= tela.getContext("2d");
+			
+			pincel.fillStyle = "black";
+			pincel.font = "15px Georgia";
+			pincel.fillText(texto,x,y);
+		}
+
+		function desenhaBarra(x,y,dado,cores,texto) {
 			desenhaTexto(x,y-10,texto);
 
-			var somaAltura = 0;
+			var somaDados = 0; //variável auxiliar
 
 			for (let i = 0; i < dado.length; i++) {
-				var altura = serie[i];
-				desenhaRetangulo(x,y+somaAltura,50,altura,cores[i])
+				const dadoUnidade = dado[i];
 				
-				somaAltura+= altura;
+				desenhaRetangulo(x,y+somaDados,50,dadoUnidade,cores[i]);
+
+				somaDados = somaDados + dadoUnidade;
 			}
 		}
-		
-		desenhaDados(50,50,dados2015,cores, "2015")
 
+		desenhaBarra(50,50,dados2015,cores, '2015');
 	</script>
 
 </body>
