--- a/grafico_barras.html
+++ b/grafico_barras.html
@@ -48,7 +48,7 @@
 				
 				desenhaRetangulo(x,y+somaDados,50,dadoUnidade,cores[i]);
 
-				somaDados = somaDados + dadoUnidade;
+				somaDados += dadoUnidade;
 			}
 		}
 
