--- a/grafico_barras.html
+++ b/grafico_barras.html
@@ -44,7 +44,8 @@
 			var somaDados = 0; //variável auxiliar
 
 			for (let i = 0; i < dado.length; i++) {
-				const dadoUnidade = dado[i];
+				const dadoUnidade = dado[i]; //guardar o valor de cada unidade
+				//em cada posição do array.
 				
 				desenhaRetangulo(x,y+somaDados,50,dadoUnidade,cores[i]);
 
