--- a/interacao_tela_muda_cor_treino.html
+++ b/interacao_tela_muda_cor_treino.html
@@ -36,7 +36,16 @@
 
      function trocaCor() {
          
+        indiceCor++;
+
+        if(indiceCor == cores.length){
+            indiceCor = 0
+        }
+        
+        return false;
      }
+     tela.oncontextmenu = trocaCor;
+
     </script>
 
 </body>
