--- a/interacao_tela_aumento_bolinha.html
+++ b/interacao_tela_aumento_bolinha.html
@@ -17,6 +17,7 @@
         var pincel = tela.getContext("2d");
         var cores = ["blue","red", "yellow"]
         var indiceCor = 0;
+        var raio = 10
 
 
        pincel.fillStyle= "grey"
@@ -30,9 +31,18 @@
 
         pincel.fillStyle= cores[indiceCor];
         pincel.beginPath();
-        pincel.arc(x,y,10,0,2*3.14);
+        pincel.arc(x,y,raio,0,2*3.14);
         pincel.fill();
-    
+
+
+        if(evento.shiftKey &&raio +10<= 40 ){
+            raio+=10;
+        }
+        if(evento.ctrlKey && raio-5 >= 10){
+            raio-= 5;
+        }
+
+
         console.log(`Eixo x = ${x} e eixo y = ${y}.`)
       }
         
