--- a/animação_bolinha.html
+++ b/animação_bolinha.html
@@ -22,7 +22,7 @@
         pincel.fillRect(0,0,600,400);
 
         function desenhaBolinha(x,y,raio) {
-            pincel.fillStyle = cor.value;// cor escolhida pelo input do usuario
+            pincel.fillStyle = cor.value;// cor escolhida pelo input do usuario.
             pincel.beginPath();
             pincel.arc(x,y,raio,0,2*Math.PI);
             pincel.fill();
