--- a/animação_bolinha.html
+++ b/animação_bolinha.html
@@ -33,23 +33,30 @@
         
         var x = 20;
 
-        var sentido = 1;
+        var sentido = 1;// esse sentido que definira se o eixo X terá incremento ou decremento.
+
+        var raio = 20
 
         function animaBolinha() {
             limpaTela();
 
-            if (x > 600){
+            if (x > 590){
                 sentido = -1;
-            } else if (x < 0 ){
+            } else if (x < 10 ){
                 sentido = 1;
             }
 
-            desenhaBolinha(x,20,10)
+            if(raio<=30){
+                raio++;
+            }else if (raio <= 20){
+                raio--;
+            }
+            desenhaBolinha(x,20,raio)
             x = x + sentido;
             
         }
    
-        setInterval(animaBolinha, 0001 )
+        setInterval(animaBolinha, 20 )
         </script>
 </body>
 </html>
