--- a/animação_bolinha.html
+++ b/animação_bolinha.html
@@ -60,9 +60,9 @@
             }
             raio+=tamanhoRaio
         }
-
-        setInterval(animaBolinha, 20 )
-        setInterval(mudancaTamanho,20)
+         var tempoAnimacao = 20
+        setInterval(animaBolinha, tempoAnimacao )
+        setInterval(mudancaTamanho, tempoAnimacao)
 
         </script>
 </body>
