--- a/primeiro_jogo.html
+++ b/primeiro_jogo.html
@@ -56,7 +56,7 @@
             var x = evento.pageX - tela.offsetLeft;
             var y = evento.pageY - tela.offsetTop;
 
-            if (x >= xAleatorio - raio && x<=xAleatorio + raio && y >=yAleatorio - raio && y <= yAleatorio + raio){
+            if (x > xAleatorio - raio && x<xAleatorio + raio && y >yAleatorio - raio && y < yAleatorio + raio){
                 alert("Voce acertou!");
             } else{
                 alert("Você errou!")
